# zobj

./: .gitignore  LICENSE  README.md  meson.build  zensical.toml
docs/: index.md
include/: zobj.h
src/: zobj.c
